--- a/pages/qietu.html
+++ b/pages/qietu.html
@@ -101,12 +101,44 @@
             background: url("../img/团队插图.png") no-repeat top left;
             background-size: cover;
         }
+        .liucheng{
+            width: 100%;
+            height: 1900px;
+            background: url(../img/波线.png) no-repeat top center;
+            background-size: 40% 100%;
+        }
+        .anlibtn1{
+            width: 212px;
+            height: 60px;
+            border: 0 solid transparent;
+            background-color: rgb(23, 112, 206);
+            color:white;
+            font-size: 30px;
+        }
+        .anlibtn2{
+            width: 212px;
+            height: 60px;
+            border: 0 solid transparent;
+            margin-left:10px;
+            background-color: lightgray;
+            color:white;
+            font-size: 30px;
+        }
+        .picbtn{
+            height: 50px;
+            width:120px;
+            border:0 solid transparent;
+            border-radius: 30px;
+            background-color: lightgray;
+            color:white;
+            font-size: 28px;
+        }
     </style>
 </head>
 <body style="margin: 0;">
     <div style="width: 100%;height: 950px;">
         <div class="blueback">
-            <div class="chuizhi">
+            <div style="display: flex;flex-direction: column;align-items: center;">
                 <h3 style="font-size: 44px">软件定制开发</h3>
                 <span style="font-size: 40px">基于区块链、大数据、加密算法等最新技术</span>
                 <span style="font-size: 40px">可按需定制开发小程序+电商、小程序+直播app等</span>
@@ -343,12 +375,68 @@
             </div>
         </div>
     </div>
-    <div style="width: 100%;height: 960px;background-color: #45647c">
+    <div style="width: 100%;height: 750px;background-color: #45647c">
         <div class="chuizhi" style="background-color: #45647c;color: whitesmoke">
             <div class="bottom"></div>
-            <div style="width: 100%;height: 4px;background-color: #808580"></div>
+            <div style="width: 100%;height: 4px;margin:20px 0 20px 0;background-color: #808580"></div>
             <h1 style="font-size: 45px">我们的团队</h1>
-            <span></span>
+            <span style="font-size: 33px;">核心成员来自BAT，华为等，技术够硬，实力强，</span>
+            <span style="font-size: 33px;">系统安全稳定，智慧高效</span>
+            <div style="margin: 30px;">
+                <img src="../img/合作.png" style="width: 350px;height:33px;margin-left: 10px;"/>
+                <img src="../img/huawei.png" style="width: 150px;height:30px;margin-left: 10px;"/>
+            </div>
+        </div>
+    </div>
+    <div style="width: 100%;height:2150px;background-color:rgb(222, 240, 255);">
+        <div class="chuizhi" style="background-color:rgb(222, 240, 255);height: 200px;">
+            <h1 style="font-size: 45px;">我们的服务流程</h1>
+        </div>
+        <div class="liucheng"></div>
+    </div>
+    <div style="width: 90%;height: 2700px;margin: auto;border: 0 solid transparent;">
+        <div class="chuizhi">
+            <h1 style="font-size: 45px;margin-top: 80px;">我们定制过的开发案例</h1>
+            <span style="font-size: 30px;margin-top: -10px;">祝你能顺利找到所遇需要的，让我们来帮你实现</span>
+            <div style="display: flex;margin-top: 60px;margin-bottom: 60px;">
+                <button class="anlibtn1">小程序开发</button>
+                <button class="anlibtn2">代运营推广</button>
+                <button class="anlibtn2">广告投放</button>
+                <button class="anlibtn2">H5页面定制</button>
+            </div>
+            <div style="width: 100%;height: 750px;">
+                <img src="../img/500174457_banner.png" style="width: 100%;height: 70%;"/>
+                <div style="border: 1px solid lightgray;height: 22%;">
+                    <h1>深圳投资推广署</h1>
+                    <div style="display: flex;">
+                        <button class="picbtn">H5</button>
+                        <button class="picbtn" style="margin-left: 20px;">代运营</button>
+                        <button class="picbtn" style="margin-left: 20px;">开发</button>
+                    </div>
+                </div>
+            </div>
+            <div style="width: 100%;height: 750px;">
+                <img src="../img/500420407_banner.png" style="width: 100%;height: 70%;"/>
+                <div style="border: 1px solid lightgray;height: 22%;">
+                    <h1>太平洋抽奖</h1>
+                    <div style="display: flex;">
+                        <button class="picbtn">H5</button>
+                        <button class="picbtn" style="margin-left: 20px;">代运营</button>
+                        <button class="picbtn" style="margin-left: 20px;">开发</button>
+                    </div>
+                </div>
+            </div>
+            <div style="width: 100%;height: 750px;">
+                <img src="../img/500420407_banner.png" style="width: 100%;height: 70%;"/>
+                <div style="border: 1px solid lightgray;height: 22%;">
+                    <h1>泽众酒店</h1>
+                    <div style="display: flex;">
+                        <button class="picbtn">H5</button>
+                        <button class="picbtn" style="margin-left: 20px;">代运营</button>
+                        <button class="picbtn" style="margin-left: 20px;">开发</button>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
